# APP_CORE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  PKI_GUIDE.md  README.md  TCPClient.java  compile.sh  gen_hybrid_pki.sh  gen_pki.sh  piLoader.sh  run_explo.sh  run_inter.sh  run_with_asan.sh  test.py
.github/workflows/: mirroring.yml
ADA/app_core_explo/: alire.toml  app_core_explo.gpr
ADA/app_core_explo/alire/: build_hash_inputs  settings.toml
ADA/app_core_explo/config/: app_core_explo_config.ads  app_core_explo_config.gpr  app_core_explo_config.h
ADA/app_core_explo/src/: app_core_explo.adb  lumpiz_binding.ads  mrpiz_binding.adb  mrpiz_binding.ads
ADA/app_core_explo/src/hardware_abstraction/: hardware_abstraction.adb  hardware_abstraction.ads
ADA/app_core_explo/src/sensor_manager/: sensor_manager.adb  sensor_manager.ads
ADA/app_core_explo/src/timer/: timer.adb  timer.ads
EXPLO/: main.c
EXPLO/IDCard/: idCard.c  idCard.h
EXPLO/SensorManager/: sensorManager.c  sensorManager.h
EXPLO/explorationManager/: explorationManager.c  explorationManager.h
EXPLO/safetyController/: safetyController.c  safetyController.h
EXPLO/ui/: ui.c  ui.h
INTER/: config.h  exemple.c  main.c  main.h
INTER/StrategyManager/: strategy_manager.c  strategy_manager.h
INTER/StrategyManager/include/: intervention_manager.h  main.h  strategy_manager.h
INTER/StrategyManager/src/: intervention_manager.c  main.c  strategy_manager.c
INTER/StrategyWrapper/: strategy_wrapper.c  strategy_wrapper.h
INTER/StrategyWrapper/AStar/: astar_wrapper.c  astar_wrapper.h
RUST/: Cargo.toml  README.md  test_server.py
RUST/common/: Cargo.toml
RUST/common/src/: hardware.rs  lib.rs  sensor_manager.rs  xAssert.rs  xLog.rs  xWatchdog.rs  x_assert.rs  x_log.rs  x_watchdog.rs
RUST/common/src/IdCard/: id_card.rs  mod.rs
RUST/common/src/hardwareAbstraction/: mod.rs  mrpiz.rs
RUST/common/src/network/: converter.rs  handle_network.rs  mod.rs  server.rs
RUST/common/src/xOs/: horodateur.rs  mod.rs  mutex.rs  threads.rs  xThreads.rs
RUST/explo/: Cargo.toml
RUST/explo/src/: main.rs
RUST/lib_mrpiz/lib_lumpiz-x86_64-v0.1.1/doc/html/: group__lumpiz.html  group__lumpiz__error.html  lumpiz_8h_source.html  modules.html
RUST/libs/lib_mrpiz-x86_64-v0.6.1/doc/html/: globals_eval.html
RUST/libs/lib_mrpiz-x86_64-v0.6.1/include/mrpiz/: error.h
RUST/mrpiz_bindings/: Cargo.toml  build.rs
RUST/mrpiz_bindings/examples/: test_both_libs.rs
RUST/mrpiz_bindings/src/: lib.rs
common/IDCard/: idCard.c  idCard.h
common/InterventionManager/: intervention_manager.c  intervention_manager.h
common/SensorManager/: sensorManager.c  sensorManager.h
common/StrategyManager/: Astar.c  Astar.h  VERSION.md  strategy_manager.c  strategy_manager.h
common/StrategyWrapper/: strategy_wrapper.c  strategy_wrapper.h
common/StrategyWrapper/AStar/: astar_wrapper.c  astar_wrapper.h
common/assert/: xAssert.c  xAssert.h
common/crc32/: crc32.c  crc32.h
common/crypto/certificate/: certManagement.c
common/crypto/cryptoEngine/: cryptoEngine.c  cryptoEngine.h
common/crypto/tlsEngine/: tlsEngine.c
common/error/: xError.h
common/hardwareAbstraction/: hardwareAbstraction.c  hardwareAbstraction.h
common/helpers/: util_macros.h
common/ihm/: ihm.c  ihm.h
common/logger/: log.c  log.h
common/map_engine/: map_engine.c  map_engine.h
common/network/: networkHandler.h  xNetwork.c  xNetwork.h
common/network/common/: handleNetworkMessage.c  handleNetworkMessage.h  networkEncode.h
common/network/encoder/: networkEncoder.c  networkEncoder.h
common/network/protocol/: xProtocol.c  xProtocol.h
common/network/server/: networkServer.c  networkServer.h  xServer.c  xServer.h
common/network/socket/: xNetwork.c  xNetwork.h
common/network/tls/: tlsEngine.h
common/propulsion/: controlMotorAbstraction.c  controlMotorAbstraction.h  motorControl.c  motorControl.h  pilot.c  pilot.h  positionControl.c  positionControl.h  robotConfiguration.h
common/propulsionV2/: motionController.c  motionController.h  positionTracker.c  positionTracker.h  propulsionSystem.c  propulsionSystem.h
common/safetyController/: safetyController.c
common/supervisor/: supervisor.c  supervisor.h
common/symbols/: geometry.h  ret_codes.h
common/timer/: xTimer.c  xTimer.h
common/tls/certificate/: certManagement.c  certManagement.h  certificateManagement.c  certificateManagement.h
common/tls/engine/: tlsEngine.c  tlsEngine.h
common/watchdog/: watchdog.c  watchdog.h
common/xLog/: xLog.c  xLog.h
common/xOs/: xOsCritical.h  xOsHorodateur.c  xOsHorodateur.h  xOsMemory.h  xOsMutex.c  xOsMutex.h  xOsSemaphore.c  xOsSemaphore.h  xTask.c  xTask.h
libs/lib_lumpiz-aarch64-v0.1.1/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  menudata.js
libs/lib_lumpiz-aarch64-v0.1/doc/html/: dir_4ef0e832a39ca19b19410e79be1b6606.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e746c45371ab5146622cee9c45815bfd.html  error_8h_source.html  files.html  group__lumpiz__error.html  lumpiz_8h_source.html
libs/lib_lumpiz-aarch64-v0.1/include/lumpiz/: error.h  lumpiz.h
libs/lib_lumpiz-x86_64-v0.1.1/doc/html/: error_8h_source.html  index.html
libs/lib_lumpiz-x86_64-v0.1.1/include/lumpiz/: error.h
libs/lib_lumpiz-x86_64-v0.1/doc/html/: dir_f712def9c2e39ba7b6747d1499385798.html  error_8h_source.html  group__lumpiz__luminosity.html
libs/lib_lumpiz-x86_64-v0.1/include/lumpiz/: lumpiz.h
libs/lib_mrpiz-aarch64-v0.6.1/doc/html/: dir_eed44d2f602b44ca6aa99c63cd11adc6.html  globals.html  index.html
libs/lib_mrpiz-aarch64-v0.6/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  error_8h_source.html
libs/x-tools/armv6-rpi-linux-gnueabihf/: build.log.bz2
python_test/: tls_client_gui.py  tls_test_client.py
rust/: .gitignore
rust/tls/: Cargo.toml  Makefile  build.rs  integration.cmake
rust/tls/include/: rust_tls_engine.h  tls_engine.h
rust/tls/src/: certificate.rs  lib.rs  post_quantum.rs  tls_engine.rs  wolfssl_ffi.rs
test/PATO_JMeter/: Plant_de_test_TCP.jmx  plan_test.jmx  user2.properties
(+134 files in other folders)
